IMP_py/IMP_DParser.py
# Generated from C:/Users/anitr/OneDrive/Documents/__University/6sem/PVSUS/MD5/IMP-PARTIAL-CORRECTNESS-GEN\IMP_D.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IMP_DParser ( Parser ):

    grammarFileName = "IMP_D.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'read'", "'write'", "','", "'if'", 
                     "'then'", "'else'", "'fi'", "'while'", "'do'", "'od'", 
                     "'{'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'and'", "'or'", "'not'", "';'", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WEAKOP", "STRONGOP", "RELATION", 
                      "BOOL", "CONJUNCTION", "DISCJUNCTION", "NOT", "SEMICOLON", 
                      "LPARENTHESIS", "RPARENTHESIS", "NUMBER", "VARNAME", 
                      "ANY", "WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_assign_stmt = 3
    RULE_input_stmt = 4
    RULE_output_stmt = 5
    RULE_varlist = 6
    RULE_cond_stmt = 7
    RULE_loop = 8
    RULE_invariant = 9
    RULE_log_expr = 10
    RULE_log_term = 11
    RULE_log_elem = 12
    RULE_condition = 13
    RULE_expr = 14
    RULE_term = 15
    RULE_elem = 16

    ruleNames =  [ "progr", "series", "stmt", "assign_stmt", "input_stmt", 
                   "output_stmt", "varlist", "cond_stmt", "loop", "invariant", 
                   "log_expr", "log_term", "log_elem", "condition", "expr", 
                   "term", "elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    WEAKOP=14
    STRONGOP=15
    RELATION=16
    BOOL=17
    CONJUNCTION=18
    DISCJUNCTION=19
    NOT=20
    SEMICOLON=21
    LPARENTHESIS=22
    RPARENTHESIS=23
    NUMBER=24
    VARNAME=25
    ANY=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(IMP_DParser.SeriesContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgr" ):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = IMP_DParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.series()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeriesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.StmtContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.StmtContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.SEMICOLON)
            else:
                return self.getToken(IMP_DParser.SEMICOLON, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_series

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeries" ):
                listener.enterSeries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeries" ):
                listener.exitSeries(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeries" ):
                return visitor.visitSeries(self)
            else:
                return visitor.visitChildren(self)




    def series(self):

        localctx = IMP_DParser.SeriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_series)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.stmt()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.SEMICOLON:
                self.state = 37
                self.match(IMP_DParser.SEMICOLON)
                self.state = 38
                self.stmt()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond_stmt(self):
            return self.getTypedRuleContext(IMP_DParser.Cond_stmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(IMP_DParser.LoopContext,0)


        def input_stmt(self):
            return self.getTypedRuleContext(IMP_DParser.Input_stmtContext,0)


        def output_stmt(self):
            return self.getTypedRuleContext(IMP_DParser.Output_stmtContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(IMP_DParser.Assign_stmtContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = IMP_DParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IMP_DParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.cond_stmt()
                pass
            elif token in [IMP_DParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.loop()
                pass
            elif token in [IMP_DParser.T__1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.input_stmt()
                pass
            elif token in [IMP_DParser.T__2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.output_stmt()
                pass
            elif token in [IMP_DParser.VARNAME]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.assign_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(IMP_DParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(IMP_DParser.ExprContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = IMP_DParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(IMP_DParser.VARNAME)
            self.state = 52
            self.match(IMP_DParser.T__0)
            self.state = 53
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(IMP_DParser.VarlistContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_input_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_stmt" ):
                listener.enterInput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_stmt" ):
                listener.exitInput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_stmt" ):
                return visitor.visitInput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def input_stmt(self):

        localctx = IMP_DParser.Input_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_input_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(IMP_DParser.T__1)
            self.state = 56
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(IMP_DParser.VarlistContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_output_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_stmt" ):
                listener.enterOutput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_stmt" ):
                listener.exitOutput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_stmt" ):
                return visitor.visitOutput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def output_stmt(self):

        localctx = IMP_DParser.Output_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_output_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(IMP_DParser.T__2)
            self.state = 59
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.VARNAME)
            else:
                return self.getToken(IMP_DParser.VARNAME, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = IMP_DParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(IMP_DParser.VARNAME)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.T__3:
                self.state = 62
                self.match(IMP_DParser.T__3)
                self.state = 63
                self.match(IMP_DParser.VARNAME)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(IMP_DParser.Log_exprContext,0)


        def series(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.SeriesContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.SeriesContext,i)


        def getRuleIndex(self):
            return IMP_DParser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = IMP_DParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cond_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(IMP_DParser.T__4)
            self.state = 70
            self.log_expr()
            self.state = 71
            self.match(IMP_DParser.T__5)
            self.state = 72
            self.series()
            self.state = 73
            self.match(IMP_DParser.T__6)
            self.state = 74
            self.series()
            self.state = 75
            self.match(IMP_DParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invariant(self):
            return self.getTypedRuleContext(IMP_DParser.InvariantContext,0)


        def log_expr(self):
            return self.getTypedRuleContext(IMP_DParser.Log_exprContext,0)


        def series(self):
            return self.getTypedRuleContext(IMP_DParser.SeriesContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = IMP_DParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(IMP_DParser.T__8)
            self.state = 78
            self.invariant()
            self.state = 79
            self.log_expr()
            self.state = 80
            self.match(IMP_DParser.T__9)
            self.state = 81
            self.series()
            self.state = 82
            self.match(IMP_DParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvariantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(IMP_DParser.NUMBER, 0)

        def getRuleIndex(self):
            return IMP_DParser.RULE_invariant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvariant" ):
                listener.enterInvariant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvariant" ):
                listener.exitInvariant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvariant" ):
                return visitor.visitInvariant(self)
            else:
                return visitor.visitChildren(self)




    def invariant(self):

        localctx = IMP_DParser.InvariantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_invariant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(IMP_DParser.T__11)
            self.state = 85
            self.match(IMP_DParser.NUMBER)
            self.state = 86
            self.match(IMP_DParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.Log_termContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.Log_termContext,i)


        def DISCJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.DISCJUNCTION)
            else:
                return self.getToken(IMP_DParser.DISCJUNCTION, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_expr" ):
                listener.enterLog_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_expr" ):
                listener.exitLog_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_expr" ):
                return visitor.visitLog_expr(self)
            else:
                return visitor.visitChildren(self)




    def log_expr(self):

        localctx = IMP_DParser.Log_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_log_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.log_term()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.DISCJUNCTION:
                self.state = 89
                self.match(IMP_DParser.DISCJUNCTION)
                self.state = 90
                self.log_term()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.Log_elemContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.Log_elemContext,i)


        def CONJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.CONJUNCTION)
            else:
                return self.getToken(IMP_DParser.CONJUNCTION, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_log_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_term" ):
                listener.enterLog_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_term" ):
                listener.exitLog_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_term" ):
                return visitor.visitLog_term(self)
            else:
                return visitor.visitChildren(self)




    def log_term(self):

        localctx = IMP_DParser.Log_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_log_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.log_elem()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.CONJUNCTION:
                self.state = 97
                self.match(IMP_DParser.CONJUNCTION)
                self.state = 98
                self.log_elem()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(IMP_DParser.ConditionContext,0)


        def BOOL(self):
            return self.getToken(IMP_DParser.BOOL, 0)

        def LPARENTHESIS(self):
            return self.getToken(IMP_DParser.LPARENTHESIS, 0)

        def log_expr(self):
            return self.getTypedRuleContext(IMP_DParser.Log_exprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(IMP_DParser.RPARENTHESIS, 0)

        def VARNAME(self):
            return self.getToken(IMP_DParser.VARNAME, 0)

        def NOT(self):
            return self.getToken(IMP_DParser.NOT, 0)

        def getRuleIndex(self):
            return IMP_DParser.RULE_log_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_elem" ):
                listener.enterLog_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_elem" ):
                listener.exitLog_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_elem" ):
                return visitor.visitLog_elem(self)
            else:
                return visitor.visitChildren(self)




    def log_elem(self):

        localctx = IMP_DParser.Log_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_log_elem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IMP_DParser.NOT:
                self.state = 104
                self.match(IMP_DParser.NOT)


            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 107
                self.condition()
                pass

            elif la_ == 2:
                self.state = 108
                self.match(IMP_DParser.BOOL)
                pass

            elif la_ == 3:
                self.state = 109
                self.match(IMP_DParser.LPARENTHESIS)
                self.state = 110
                self.log_expr()
                self.state = 111
                self.match(IMP_DParser.RPARENTHESIS)
                pass

            elif la_ == 4:
                self.state = 113
                self.match(IMP_DParser.VARNAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.ExprContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.ExprContext,i)


        def RELATION(self):
            return self.getToken(IMP_DParser.RELATION, 0)

        def getRuleIndex(self):
            return IMP_DParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = IMP_DParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.expr()
            self.state = 117
            self.match(IMP_DParser.RELATION)
            self.state = 118
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.TermContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.TermContext,i)


        def WEAKOP(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.WEAKOP)
            else:
                return self.getToken(IMP_DParser.WEAKOP, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = IMP_DParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.term()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.WEAKOP:
                self.state = 121
                self.match(IMP_DParser.WEAKOP)
                self.state = 122
                self.term()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.ElemContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.ElemContext,i)


        def STRONGOP(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.STRONGOP)
            else:
                return self.getToken(IMP_DParser.STRONGOP, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = IMP_DParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.elem()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.STRONGOP:
                self.state = 129
                self.match(IMP_DParser.STRONGOP)
                self.state = 130
                self.elem()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(IMP_DParser.NUMBER, 0)

        def VARNAME(self):
            return self.getToken(IMP_DParser.VARNAME, 0)

        def LPARENTHESIS(self):
            return self.getToken(IMP_DParser.LPARENTHESIS, 0)
